--- a/views/index.html
+++ b/views/index.html
@@ -305,7 +305,7 @@ document.addEventListener('DOMContentLoaded', () => {
                 <div class="card">
                     <img src="/public/img/gind.jpg" alt="">
                     <h1>GrindingCofee</h1>
-                    <p>Aplicacion completa para comprar cafe de diferentes marcas. Front-end y Back-end con bases de datos</p>
+                    <p>Aplicacion completa hecha en un equipo de 5 personas. En esta app, puedes comprar cafe de diferentes marcas. Front-end y Back-end con bases de datos</p>
                     <a href="https://github.com/imjonslz/grupo_9_GrindingCoffee">Ver mas</a>
                 </div>
             </div>
