--- a/home.css
+++ b/home.css
@@ -34,26 +34,34 @@ header .section-nav li a{
 /* /////////////////////////////////////////////////////////////////// */
 
 
-header .header-print{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 5rem;
-    margin-bottom: 3rem;
-}
-
-header .header-print div{
+header .header-print .prints{
     margin-left: 10rem;
     margin-right: 10rem;
-    text-align: center;
+    display: flex;
+    margin-top: 5rem;
+    margin-bottom: 3rem;
+    justify-content: center;
+    align-items: center;
 }
 
-header .header-print h1{
-    margin-bottom: 2.8rem;
+header .header-print .prints .photo img{
+    width: 30rem;
+    border-radius: 3rem 16rem 3rem 16rem;
+}
+
+
+
+
+header .header-print .prints .texts{
+    margin: 3rem;
+}
+
+header .header-print .prints h1{
+    margin-bottom: 2rem;
     background: #ccc;
   background: linear-gradient(#00ff7b ,#00fbff);
   font-family: system-ui;
-  font-size: 6rem;
+  font-size: 5rem;
   line-height: 115%;
 
   -webkit-text-fill-color: transparent;
@@ -61,7 +69,7 @@ header .header-print h1{
 }
 
 header .header-print p{
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     color: #dfdfdf;
     font-weight: 200;
     /* font-weight: ; */
@@ -272,7 +280,6 @@ footer .box-footer .boxed div ul a:hover{
       flex: 0 0 calc(100% - 20px); /* Una columna en pantallas aún más pequeñas */
     }
   }
-  
 
 
 
@@ -282,7 +289,7 @@ footer .box-footer .boxed div ul a:hover{
 /* ... (otros estilos) ... */
 
 /* Ajustes para tamaños de pantalla más pequeños */
-@media screen and (min-width:324px) and ( max-width: 768px) {
+@media screen and (min-width:324px) and ( max-width: 671px) {
 
     header .section-nav{
         display: none;
@@ -294,13 +301,20 @@ footer .box-footer .boxed div ul a:hover{
         /* margin-top: 1rem; */
     }
 
-    header .header-print h1{
-        font-size: 2rem;
+    header .header-print .prints .photo{
+        display: none;
+    }
 
+    header .header-print .prints .texts{
+        text-align: center;
+    }
+
+    header .header-print .texts h1{
+        font-size: 3.5rem;
     }
 
 
-    header .header-print p{
+    header .header-print .texts p{
         font-size: 1rem;
     }
 
@@ -339,6 +353,11 @@ footer .box-footer .boxed div ul a:hover{
 
     .content-card{
         justify-content: center;
+        flex-direction: column;
+    }
+
+    .content-card .card{
+        width: auto;
     }
 
     .section-sobre-mi .content-card-sobre .card-sobre-mi{
@@ -360,3 +379,33 @@ footer .box-footer .boxed div ul a:hover{
 
 
 }
+
+/* @media screen and (min-width: 481px) and ( max-width: 670px){
+    main .section .content-card{
+        display: flex;
+        flex-direction: column;
+    }
+} */
+
+
+@media screen and (min-width: 671px) and ( max-width: 978px){
+    header .header-print .prints{
+        justify-content: center;
+        padding-left: 6rem;
+        padding-right: 6rem;
+    }
+
+
+    header .header-print .prints .photo img{
+        width: 20rem;
+        border-radius: 10rem 6rem 10rem 6rem;
+    }
+
+    header .header-print .prints .texts h1{
+        font-size: 3.3rem;
+    }
+
+    header .header-print .prints .texts p{
+        font-size: 20px;
+    }
+  }
